@@ -15,6 +15,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Documentation, no functional change.
+ common/treasure.c: link functions to the relevant page.
+ doc/Developers/collect.dox: new file.
+ doc/Developers/mainpage.dox: link to collect process.
+ doc/Developers/treasure_list.dox: add much content.
+Nicolas Weeger, 2008-01-16
+
 Commit combat rebalancing.  Combat is slower now, so less deadly.  If player
 is idle, they get faster hp/sp regen.  Allow generators to have limit on
 number of monsters they generate before disappearing.  Starting characters
